--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,4 +1,6 @@
 body {
+    background-color: rgb(17, 17, 28, 1);
+    color: oklch(90% 0.008 286.75);
     width: 210mm; /* A4 width */
     margin: 0 auto; /* Center the page */
     text-align: center;
@@ -35,13 +37,6 @@ table,th,td {
   }
   a {
     color: oklch(87.14% 0.031 7.09);
-  }
-}
-
-@media (prefers-color-scheme: dark) and (prefers-contrast: more) {
-  body {
-    background-color: oklch(21.14% 0.021 285.75);
-    color: oklch(90% 0.008 286.75);
   }
 }
 
