--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -47,14 +47,55 @@ table,th,td {
   }
 }
 
-/*main {
-  margin-block: 0;
-  margin-inline: 1rem;
-  display: flex;
-  justify-content: center;
-  align-items: center; 
-  min-height: 60svh;
-}*/
+/*Tooltip text*/
+.tooltip {
+  position: relative;
+  text-decoration: underline dotted;
+}
+
+.tooltip:hover {
+  -webkit-animation-play-state: paused;
+}
+
+.tooltip:hover .info {
+  visibility:visible;
+}
+
+.info {      
+  visibility:hidden;
+  box-shadow:0 0 50px 0 rgba(0,0,0,.5);
+  background-color: rgb(17, 17, 28, 1);
+  border-radius: 4px;
+  border: 1px solid oklch(90% 0.008 286.75); 
+  bottom: 80%;
+  display: block;
+  left: 80%;
+  padding: 1em;
+  position: absolute;    
+  width: 280px;
+  z-index: 1;
+}
+.info.large {
+  width: 480px;
+}
+
+abbr {
+  font-style: italic;
+  position: relative
+}
+
+abbr:hover::after {
+  background: rgba(0,0,0,.5);
+  border-radius: 4px;
+  bottom: 100%;
+  content: attr(title);
+  display: block;
+  left: 100%;
+  padding: 1em;
+  position: absolute;    
+  width: 280px;
+  z-index: 1;
+}
 
 footer {
   min-height: 35svh;
